--- a/src/main/resources/templates/customer/index_func.html
+++ b/src/main/resources/templates/customer/index_func.html
@@ -47,7 +47,7 @@
                     + '<td>' + item.note + '</td>'
                     + '<td>' + '<div style="text-align: center; vertical-align: middle;">' +
                     '<button type="button" data-toggle="modal" class="btn btn-circle btn-icon edit-cus"' +
-                    ' href="#kt_modal_3" data-index="' + (i - 1) + '"><i class="flaticon-edit"></i></button>' +
+                    ' data-index="' + (i - 1) + '"><i class="flaticon-edit"></i></button>' +
                     '<button type="button" class="btn btn-circle btn-icon delete-cus" data-index="' + (i - 1) + '" ' +
                     '  ><i class="flaticon-delete"></i></button></div>'
                     + '</td>'
@@ -58,67 +58,65 @@
 
         document.getElementById("searchCus").addEventListener("click", initSearchCustomer);
 
-        document.getElementById("saveCustomer").addEventListener("click", createCustomer);
-
         $(document).on("click", ".edit-cus", editCustomer);
 
-        function createCustomer() {
-            var name = $('#cusName').val().trim();
-            var billing = $('#cusBilling').val().trim();
-            var note = $('#cusNote').val().trim();
-            var isDebtor = billing.includes('N') ? true : false;
+        // function createCustomer() {
+        //     var name = $('#cusName').val().trim();
+        //     var billing = $('#cusBilling').val().trim();
+        //     var note = $('#cusNote').val().trim();
+        //     var isDebtor = billing.includes('N') ? true : false;
 
-            let body = {
-                name,
-                billing,
-                isDebtor,
-                note
-            }
-            if (!cusId) {
-                //createCustomer
-                postRequest({
-                    url: "/customers",
-                    data: body,
-                    success: (data) => {
-                        // console.log(data);
-                        window.location = "/customer";
-                    },
-                    error: (e) => {
-                        console.log(e);
-                        var error = e['error'];
-                        if (error != null) {
-                            let content = JSON.parse(error);
-                            $("#error-log").html(content['message'] + ".<br/>")
-                        } else
-                            $("#error-log").html("Lỗi hệ thống!<br/>")
+        //     let body = {
+        //         name,
+        //         billing,
+        //         isDebtor,
+        //         note
+        //     }
+        //     if (!cusId) {
+        //         //createCustomer
+        //         postRequest({
+        //             url: "/customers",
+        //             data: body,
+        //             success: (data) => {
+        //                 // console.log(data);
+        //                 window.location = "/customer";
+        //             },
+        //             error: (e) => {
+        //                 console.log(e);
+        //                 var error = e['error'];
+        //                 if (error != null) {
+        //                     let content = JSON.parse(error);
+        //                     $("#error-log").html(content['message'] + ".<br/>")
+        //                 } else
+        //                     $("#error-log").html("Lỗi hệ thống!<br/>")
 
-                    }
-                })
-            } else {
-                //edit customer
-                body.id = cusId;
-                putRequest({
-                    url: '/customers/' + cusId,
-                    data: body,
-                    success: function (data) {
-                        window.location = "/customer";
-                        $('#kt_modal_3').modal('hide');
-                    },
-                    error: function (e) {
-                        console.log(e);
-                        $('#kt_modal_3').modal('hide');
-                        var error = e['error'];
-                        if (error != null) {
-                            let content = JSON.parse(error);
-                            $("#error-log").html(content['message'] + ".<br/>")
-                        } else
-                            $("#error-log").html("Lỗi hệ thống!<br/>")
+        //             }
+        //         })
+        //     } else {
+        //         //edit customer
+        //         body.id = cusId;
+        //         putRequest({
+        //             url: '/customers/' + cusId,
+        //             data: body,
+        //             success: function (data) {
+        //                 window.location = "/customer";
+        //                 $('#kt_modal_3').modal('hide');
+        //             },
+        //             error: function (e) {
+        //                 console.log(e);
+        //                 $('#kt_modal_3').modal('hide');
+        //                 var error = e['error'];
+        //                 if (error != null) {
+        //                     let content = JSON.parse(error);
+        //                     $("#error-log").html(content['message'] + ".<br/>")
+        //                 } else
+        //                     $("#error-log").html("Lỗi hệ thống!<br/>")
 
-                    }
-                });
-            }
+        //             }
+        //         });
+        //     }
 
-        }
+        // }
 
         function initSearchCustomer(){
             pagination.reset();
@@ -148,9 +146,7 @@
             var customer = list_cus[index];
             console.log('editTransaction', customer)
             cusId = customer.id;
-            $('#cusName').val(customer.name)
-            $('#cusBilling').val(customer.billing);
-            $('#cusNote').val(customer.note);
+            window.location = "/customer/"+cusId
         }
     });
 </script>
