--- a/src/main/resources/templates/customer/edit-customer/index_func.html
+++ b/src/main/resources/templates/customer/edit-customer/index_func.html
@@ -1,217 +1,74 @@
 <script type="text/javascript" th:inline="javascript">
     $(function () {
-        const pagination = new Pagination();
-        var list_pro = []
-        var proId = undefined;
-        initProcedureList();
 
-        function createCustomer() {
-            var name = $('#cusName').val().trim();
-            var billing = $('#cusBilling').val().trim();
-            var note = $('#cusNote').val().trim();
-            var isDebtor = billing.includes('N') ? true : false;
+        var id = /*[[${id}]]*/ {};
 
-            let body = {
-                name,
-                billing,
-                isDebtor,
-                note
-            }
-            if (!cusId) {
-                //createCustomer
-                postRequest({
-                    url: "/customers",
-                    data: body,
-                    success: (data) => {
-                        // console.log(data);
-                        window.location = "/customer";
-                    },
-                    error: (e) => {
-                        console.log(e);
-                        var error = e['error'];
-                        if (error != null) {
-                            let content = JSON.parse(error);
-                            $("#error-log").html(content['message'] + ".<br/>")
-                        } else
-                            $("#error-log").html("Lỗi hệ thống!<br/>")
+        console.log(id);
+        getCustomer();
 
-                    }
-                })
-            } else {
-                //edit customer
-                body.id = cusId;
-                putRequest({
-                    url: '/customers/' + cusId,
-                    data: body,
-                    success: function (data) {
-                        window.location = "/customer";
-                        $('#kt_modal_3').modal('hide');
-                    },
-                    error: function (e) {
-                        console.log(e);
-                        $('#kt_modal_3').modal('hide');
-                        var error = e['error'];
-                        if (error != null) {
-                            let content = JSON.parse(error);
-                            $("#error-log").html(content['message'] + ".<br/>")
-                        } else
-                            $("#error-log").html("Lỗi hệ thống!<br/>")
 
-                    }
-                });
-            }
-
-        }
-
-        function getListProcedure() {
-            var offset = pagination.offset() || 0;
-            var limit = pagination.limit() || 5;
-            console.log("getListProcedure")
+        function getCustomer() {
             getRequest({
-                url: "/procedure/list?limit" + limit + "&offset=" + offset,
+                url: '/customers/' + id,
                 success: function (data) {
-                    // var listProcedure = data['list'];
-                    onLoadedProcedureList(data, getListProcedure)
-
+                    console.log(data);
+                    $('#cusName').val(data.fullName || data.name);
+                    $('#cusNick').val(data.name);
+                    $('#cusPhone').val(data.phone);
+                    $('#cusAddr').val(data.address);
+                    $('#cusMoney').val(data.money);
+                    $('#cusDiag').val(data.diag);
+                    $('#cusBill').val(data.billing);
+                    $('#cusNote').val(data.note);
                 },
                 error: function (e) {
                     console.log(e);
+
+
                 }
             });
         }
 
-
-        function initProcedureList() {
-            pagination.reset();
-            getListProcedure();
-        }
-
-        function onLoadedProcedureList(data, func) {
-            var paginData = data['pagination'] || {};
-            pagination.render('list-pagination', func, {
-                count: data['count'],
-                limit: paginData['limit'],
-                total: paginData['total'],
-                offset: paginData['offset']
-            });
-            list_pro = data['list'] || [];
-            console.log(list_pro)
-            var html = '';
-
-            for (var i = 1; i <= list_pro.length; i++) {
-                var item = list_pro[i - 1];
-                var countNumber = Number.parseInt(paginData['offset'] * paginData['limit']) + i;
-                html += '<tr>'
-                    + '<td class="text-left">' + countNumber + '</td>'
-                    + '<td>' + item.name + '</td>'
-                    + '<td>' + item.billing + '</td>'
-                    + '<td>' + item.note + '</td>'
-                    + '<td>' + '<div style="text-align: center; vertical-align: middle;">' +
-                    '<button type="button" data-toggle="modal" class="btn btn-circle btn-icon edit-cus"' +
-                    ' href="#kt_modal_3" data-index="' + (i - 1) + '"><i class="flaticon-edit"></i></button>' +
-                    '<button type="button" class="btn btn-circle btn-icon delete-cus" data-index="' + (i - 1) + '" ' +
-                    '  ><i class="flaticon-delete"></i></button></div>'
-                    + '</td>'
-                    + '</tr>';
-            }
-            $('#tbody-list').html(html);
-        }
-
-        // document.getElementById("searchCus").addEventListener("click", initSearchCustomer);
-
-        document.getElementById("savePro").addEventListener("click", createProcedure);
-
-        $(document).on("click", ".edit-cus", editCustomer);
-
-        function createProcedure() {
-            var name = $('#cusName').val().trim();
-            var billing = $('#cusBilling').val().trim();
-            var note = $('#cusNote').val().trim();
-            var isDebtor = billing.includes('N') ? true : false;
-
-            let body = {
-                name,
-                billing,
-                isDebtor,
-                note
-            }
-            if (!proId) {
-                //createProcedure
-                postRequest({
-                    url: "/customers",
-                    data: body,
-                    success: (data) => {
-                        // console.log(data);
-                        window.location = "/customer";
-                    },
-                    error: (e) => {
-                        console.log(e);
-                        var error = e['error'];
-                        if (error != null) {
-                            let content = JSON.parse(error);
-                            $("#error-log").html(content['message'] + ".<br/>")
-                        } else
-                            $("#error-log").html("Lỗi hệ thống!<br/>")
-
-                    }
-                })
-            } else {
-                //edit customer
-                body.id = proId;
-                putRequest({
-                    url: '/customers/' + proId,
-                    data: body,
-                    success: function (data) {
-                        window.location = "/customer";
-                        $('#kt_modal_3').modal('hide');
-                    },
-                    error: function (e) {
-                        console.log(e);
-                        $('#kt_modal_3').modal('hide');
-                        var error = e['error'];
-                        if (error != null) {
-                            let content = JSON.parse(error);
-                            $("#error-log").html(content['message'] + ".<br/>")
-                        } else
-                            $("#error-log").html("Lỗi hệ thống!<br/>")
-
-                    }
-                });
-            }
-
-        }
-
-        function initSearchCustomer(){
-            pagination.reset();
-            searchCustomer();
-        }
-
-        function searchCustomer() {
-            var name = $('#name').val();
-            var type = $("#cb_payment").val();
-
-            var offset = pagination.offset() || 0;
-            var limit = pagination.limit() || 5;
-
-            getRequest({
-                url: "/customers/search?limit=" + limit + "&offset=" + offset + "&name=" + name + "&type=" + type,
-                success: function (data) {
-                    onLoadedCustomersList(data, searchCustomer)
-                },
-                error: function (e) {
-                    console.log(e);
-                }
-            });
-        }
+        $('#update').click(function(){
+            editCustomer();
+        })
 
         function editCustomer() {
-            var index = $(this).data('index');
-            var customer = list_pro[index];
-            console.log('editTransaction', customer)
-            proId = customer.id;
-            $('#cusName').val(customer.name)
-            $('#cusBilling').val(customer.billing);
-            $('#cusNote').val(customer.note);
+            var fullName = $('#cusName').val();
+            var name = $('#cusNick').val();
+            var phone = $('#cusPhone').val();
+            var address = $('#cusAddr').val();
+            var money = $('#cusMoney').val();
+            money.replace('.', '');
+            var diag = $('#cusDiag').val();
+            var billing = $('#cusBill').val();
+            var note = $('#cusNote').val();
+            money = Number(money);
+
+            let body = {
+                id,
+                fullName,
+                name,
+                billing,
+                note,
+                phone,
+                address,
+                diag,
+                money
+            }
+            putRequest({
+                url: '/customers/' + id,
+                data: body,
+                success: function (data) {
+                    console.log(data);
+                },
+                error: function (e) {
+                    console.log(e);
+                }
+            });
+
+
         }
+
     });
 </script>
