--- a/src/main/resources/templates/export/index.html
+++ b/src/main/resources/templates/export/index.html
@@ -115,8 +115,10 @@ License: You must have a valid license purchased only from themeforest(the above
                                                        value="2018-05">
                                             </div>
                                         </div>
-                                        <div class="form-group col-lg-1">
-                                            <input type="button" class="btn btn-success fa-file-excel" value="Xuất excel">
+                                        <div class="form-group col-lg-3" style="display: flex; align-items: flex-end;">
+                                            <button class="btn btn-success" id="export">
+                                                <i class="fa fa-file-excel" aria-hidden="true"></i>Xuất excel
+                                            </button>
                                         </div>
                                     </div>
 
