--- a/src/main/resources/templates/partials/_aside/_menu.html
+++ b/src/main/resources/templates/partials/_aside/_menu.html
@@ -156,7 +156,7 @@
                 </div>
             </li>
             <li class="kt-menu__item  kt-menu__item--submenu" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a
-                    href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon">
+                    href="/excel" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon">
 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="24" height="24" viewBox="0,0,256,256"
      version="1.1" class="kt-svg-icon">
 <g fill="#5c7cfa" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter"
