--- a/src/main/resources/templates/transaction/detail.html
+++ b/src/main/resources/templates/transaction/detail.html
@@ -145,11 +145,9 @@
             });
         }
 
-        document.getElementById('btnAddTran').onclick = function (){
-            location.href = "/add-tran"
-        }
-
-        // document.getElementById("saveTran").addEventListener("click", createTransaction);
+        // $('#btnAddTran').click(function () {
+        //     window.location = "/add-tran"
+        // });
 
         $(document).on("click", ".edit-tran", editTransaction);
 
