--- a/src/main/resources/templates/customer/add-customer/index.html
+++ b/src/main/resources/templates/customer/add-customer/index.html
@@ -147,7 +147,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                         </div>
                                         <div class="col-lg-6">
                                             <label>Số tiền</label>
-                                            <input type="number" class="form-control material-input"
+                                            <input type="text" class="form-control material-input"
                                                    id="cusMoney">
                                         </div>
                                     </div>
@@ -157,7 +157,9 @@ License: You must have a valid license purchased only from themeforest(the above
                                     </div>
                                     <br>
                                     <div class="row" style="justify-content: center">
-                                        <button class="btn btn-brand">Quay lại</button>
+                                        <a class="btn btn-brand" style="color: white;"
+                                           onclick="window.location.href = '/customer'"><span>Quay lại</span>
+                                        </a>
                                         <button class="btn btn-success" style="margin-left: 0.5em;">Thêm mới</button>
 
                                     </div>
