--- a/src/main/resources/templates/customer/add-customer/index_func.html
+++ b/src/main/resources/templates/customer/add-customer/index_func.html
@@ -1,9 +1,32 @@
 <script type="text/javascript" th:inline="javascript">
     $(function () {
-        const pagination = new Pagination();
         var list_pro = []
         var proId = undefined;
         initProcedureList();
+
+        var elem = document.getElementById("cusMoney");
+
+        elem.addEventListener("keydown", function (event) {
+            var key = event.which;
+            console.log('keydown', key)
+            if (key < 48 || (key > 57 && key < 96) || key > 105) event.preventDefault();
+        });
+
+        elem.addEventListener("keyup", function (event) {
+            var value = this.value.replace(/\./g, "");
+            this.dataset.currentValue = parseInt(value);
+            var caret = value.length - 1;
+
+            while ((caret - 3) > -1) {
+                caret -= 3;
+                value = value.split('');
+                console.log(value)
+                value.splice(caret + 1, 0, ".");
+
+                value = value.join('');
+            }
+            this.value = value;
+        });
 
         function createCustomer() {
             var name = $('#cusName').val().trim();
@@ -64,11 +87,10 @@
         }
 
         function getListProcedure() {
-            var offset = pagination.offset() || 0;
-            var limit = pagination.limit() || 5;
+
             console.log("getListProcedure")
             getRequest({
-                url: "/procedure/list?limit" + limit + "&offset=" + offset,
+                url: "/procedure/list?limit=999999&offset=0",
                 success: function (data) {
                     // var listProcedure = data['list'];
                     onLoadedProcedureList(data, getListProcedure)
@@ -82,7 +104,6 @@
 
 
         function initProcedureList() {
-            pagination.reset();
             getListProcedure();
         }
 
@@ -119,9 +140,9 @@
 
         // document.getElementById("searchCus").addEventListener("click", initSearchCustomer);
 
-        document.getElementById("savePro").addEventListener("click", createProcedure);
+        // document.getElementById("savePro").addEventListener("click", createProcedure);
 
-        $(document).on("click", ".edit-cus", editCustomer);
+        // $(document).on("click", ".edit-cus", editCustomer);
 
         function createProcedure() {
             var name = $('#cusName').val().trim();
@@ -181,7 +202,7 @@
 
         }
 
-        function initSearchCustomer(){
+        function initSearchCustomer() {
             pagination.reset();
             searchCustomer();
         }
