--- a/src/main/resources/templates/customer/edit-customer/index.html
+++ b/src/main/resources/templates/customer/edit-customer/index.html
@@ -157,7 +157,9 @@ License: You must have a valid license purchased only from themeforest(the above
                                     </div>
                                     <br>
                                     <div class="row" style="justify-content: center">
-                                        <button class="btn btn-brand">Quay lại</button>
+                                        <a class="btn btn-brand" style="color: white;"
+                                           onclick="window.location.href = '/tran-a-day'"><span>Quay lại</span>
+                                        </a>
                                         <button class="btn btn-success" style="margin-left: 0.5em;">Thêm mới</button>
 
                                     </div>
